<resources>
    <string name="app_name_pdv">TIENDAS</string>
    <string name="add_new_pdv">AGREGAR</string>
    <string name="name">NOMBRE</string>
    <string name="name_focus">NOMBRE DEL PDV / CDC </string>
    <string name="address">DIRECCIÓN</string>
    <string name="suburb">COLONIA</string>
    <string name="delegation">DELEGACIÓN</string>
    <string name="client">CLIENTE</string>
    <string name="reason">RAZON SOCIAL</string>
    <string name="type_store">TIPO DE TIENDA</string>
    <string name="enabled_location">Acepte permisos</string>
    <string name="checkin_btn">CHECK IN</string>
    <string name="checkout_btn">CHECK OUT</string>
<<<<<<< HEAD
    <string name="EFECTIVIDAD">EFECTIVIDAD DEL PVD</string>
=======
    <string name="message_dialog_exit">¿ESTA SEGURO QUE DESEA FINALIZAR VISITA?</string>
    <string name="time_checkin">HORA CHECK IN</string>
    <string name="time_checkOUT">HORA CHECK OUT</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>

>>>>>>> Save report, uopdate report, save checkin and checkout
</resources>
